# FireflyLearning

./: .gitignore  .pylintrc  README.md  example.env  main.py  pyproject.toml
.github/workflows/: black.yml  docs.yml
src/FireflyClient/: Client.py  TaskManager.py  __init__.py  client.py  exceptions.py
src/FireflyLearning/: Exceptions.py  __init__.py
